# bewer

./: .coveragerc  .gitignore  CLAUDE.md  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  publish_test.yml  release.yml  tests_and_coverage.yml
src/bewer/: __init__.py  flags.py
src/bewer/alignment/: __init__.py  alignment.py  op.py  op_type.py
src/bewer/api/: metric_api.py
src/bewer/configs/: __init__.py  base.yml  corti.yml  resolve.py
src/bewer/configs/languages/: da.yml  de.yml  en.yml  fr.yml
src/bewer/core/: __init__.py  alignment.py  caching.py  context.py  dataset.py  example.py  key_term.py  keyword.py  op.py  resolve.py  shared.py  text.py  token.py
src/bewer/metrics/: __init__.py  _kt_stats.py  _rkt_stats.py  base.py  cer.py  corti_legacy_metrics.py  corti_metrics.py  error_align.py  example_helpers.py  ktcer.py  kter.py  ktf.py  ktp.py  ktr.py  kwer.py  levenshtein.py  metrics.py  mtr.py  rktr.py  summary.py  wer.py
src/bewer/preprocessing/: __init__.py  _unicode_normalization_tables.py  context.py  normalization.py  tokenization.py
src/bewer/reporting/: __init__.py
src/bewer/reporting/html/: __init__.py  alignment.py  color_schemes.py  labels.py  report.py
src/bewer/reporting/python/: __init__.py  alignment.py  tables.py  utils.py
src/bewer/style/: alignment.py  tables.py  utils.py
src/bewer/style/html/: alignment.py  color_schemes.py  report.py
src/bewer/templates/: __init__.py  alignment.html.j2  alignment_container.html.j2  alignment_gallery.html.j2  alignment_legend.html.j2  basic.html.j2  report_basic.html.j2  summary_table.html.j2  table_list_values.html.j2
tests/: conftest.py
tests/test_alignment/: test_alignment.py  test_op.py  test_ref_index_mapping.py
tests/test_core/: test_caching.py  test_dataset.py  test_example.py  test_key_term.py  test_keyword.py  test_text.py  test_token.py
tests/test_metrics/: test_base.py  test_cer.py  test_error_align.py  test_kt_stats.py  test_ktcer.py  test_kter.py  test_ktf.py  test_ktp.py  test_ktr.py  test_kwer.py  test_mtr.py  test_parameterized_metrics.py  test_pipeline_properties.py  test_rktr.py  test_summary.py  test_wer.py
tests/test_preprocessing/: test_normalization.py  test_tokenization.py
tests/test_reporting/: __init__.py  test_alignment.py  test_html_alignment.py  test_html_report.py
tests/test_style/: __init__.py  test_alignment.py
