[tool.poetry]
name = "bewer"
version = "0.1.0a2"
description = "Evaluation and analysis framework for automatic speech recognition in Python."
authors = ["Lasse Borgholt <lb@corti.ai>"]
license = "MIT"
urls = { "Homepage" = "https://github.com/corticph/bewer" }
keywords = ["speech-recognition", "evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
readme = "README.md"

packages = [
    { include = 'bewer', from = 'src' },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
regex = "^2025.10.23"
pandas = "^2.3.3"
rich = "^14.2.0"
unidecode = "^1.4.0"
pyyaml = "^6.0.3"
rapidfuzz = "^3.14.3"
hydra-core = "^1.3.2"
error-align = "^0.1.0b3"

# These dependencies are temporarily required until we have replaced all usages for Corti specific metrics.
fuzzywuzzy = "^0.18.0"
levenshtein = "^0.27.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "9.3.0"
pre-commit = "^4.2.0"
ruff = ">=0.1,<0.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-azurepipelines = "^1.0.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
requests = "^2.31.0"
typeguard = "^4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
