[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bewer"
dynamic = ["version"]
description = "Evaluation and analysis framework for automatic speech recognition in Python."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Lasse Borgholt", email = "lb@corti.ai" }]
keywords = ["speech-recognition", "evaluation", "ASR", "NLP", "WER"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "regex>=2024.0.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "unidecode>=1.3.0",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "error-align>=0.1.0b8",
    # Temporarily required until Corti-specific metrics are replaced
    "fuzzywuzzy>=0.18.0",
    "levenshtein>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/corticph/bewer"
Repository = "https://github.com/corticph/bewer"

# --- Poetry-specific configuration ---

[tool.poetry]
version = "0.0.0"  # Placeholder for Poetry; actual version is managed by hatch-vcs
packages = [{ include = "bewer", from = "src" }]

# --- Hatch configuration ---

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/bewer"]

[tool.hatch.build.targets.sdist]
include = ["src/bewer"]

# --- Dev/test groups (Poetry-specific) ---

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"
pre-commit = "^4.2.0"
ruff = ">=0.1,<0.13"
build = "^1.0.0"
twine = "^6.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-azurepipelines = "^1.0.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
requests = "^2.31.0"
typeguard = "^4.4.2"
